Release 4.7.3
Release notes are available at:
https://docs.dremio.com/release-notes/47-release-notes.html

Change-Id: I668272e7c0dfe4a40bbc7fbe1f98309f66acdfb3