@@ -19,8 +19,10 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.Writer;
 import java.util.Collection;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.calcite.rel.RelNode;
 import org.apache.calcite.rel.RelShuttle;
@@ -32,11 +34,10 @@ import org.apache.calcite.sql.SqlExplainLevel;
 import com.dremio.exec.planner.RoutingShuttle;
 import com.dremio.exec.planner.StatelessRelShuttleImpl;
 import com.dremio.exec.planner.acceleration.DremioMaterialization;
+import com.dremio.exec.planner.acceleration.ExpansionNode;
 import com.dremio.reflection.rules.ReplacementPointer;
 import com.dremio.service.Pointer;
 import com.google.common.base.Preconditions;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.Sets;
 
 /**
@@ -55,6 +56,21 @@ public final class SubstitutionUtils {
   };
 
   private SubstitutionUtils() { }
+
+  public static Set<List<String>> findExpansionNodes(final RelNode node) {
+    final Set<List<String>> usedVdsPaths = new LinkedHashSet<>();
+    final RelVisitor visitor = new RelVisitor() {
+      @Override public void visit(final RelNode node, final int ordinal, final RelNode parent) {
+        if (node instanceof ExpansionNode) {
+          ExpansionNode expansionNode = (ExpansionNode) node;
+          usedVdsPaths.add(((ExpansionNode) node).getPath().getPathComponents());
+        }
+        super.visit(node, ordinal, parent);
+      }
+    };
+    visitor.go(node);
+    return usedVdsPaths;
+  }
 
   public static Set<List<String>> findTables(final RelNode node) {
     final Set<List<String>> usedTables = Sets.newLinkedHashSet();
@@ -101,7 +117,7 @@ public final class SubstitutionUtils {
    * Returns whether {@code table} uses one or more of the tables in
    * {@code usedTables}.
    */
-  public static boolean usesTable(final Set<List<String>> tables, final RelNode rel) {
+  public static boolean usesTableOrVds(final Set<List<String>> tables, final Set<List<String>> vdsPaths, final RelNode rel) {
     final Pointer<Boolean> used = new Pointer<>(false);
     rel.accept(new RoutingShuttle() {
       @Override
@@ -116,6 +132,13 @@ public final class SubstitutionUtils {
         if (used.value) {
           return other;
         }
+        if (other instanceof ExpansionNode) {
+          ExpansionNode expansionNode = (ExpansionNode) other;
+          if (vdsPaths.contains(expansionNode.getPath().getPathComponents())) {
+            used.value = true;
+            return other;
+          }
+        }
         return super.visit(other);
       }
     });
@@ -125,14 +148,8 @@ public final class SubstitutionUtils {
   public static List<DremioMaterialization> findApplicableMaterializations(
     final RelNode query, final Collection<DremioMaterialization> materializations) {
     final Set<List<String>> queryTablesUsed = SubstitutionUtils.findTables(query);
-    return FluentIterable.from(materializations)
-      .filter(new Predicate<DremioMaterialization>() {
-        @Override
-        public boolean apply(DremioMaterialization materialization) {
-          return usesTable(queryTablesUsed, materialization.getQueryRel());
-        }
-      })
-      .toList();
+    final Set<List<String>> queryVdsUsed = SubstitutionUtils.findExpansionNodes(query);
+    return materializations.stream().filter(materialization -> usesTableOrVds(queryTablesUsed, queryVdsUsed, materialization.getQueryRel())).collect(Collectors.toList());
   }
 
   /**
